--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-         version="3.0">
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         version="4.0">
 
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
@@ -20,7 +20,4 @@
         <url-pattern>/register</url-pattern>
     </servlet-mapping>
 
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
 </web-app>
