--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -29,4 +29,14 @@
         <url-pattern>/logout</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+    <servlet-name>CatalogServlet</servlet-name>
+    <servlet-class>catalog.CatalogServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>CatalogServlet</servlet-name>
+        <url-pattern>/catalog</url-pattern>
+    </servlet-mapping>
+
 </web-app>
