--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -77,5 +77,13 @@
         <url-pattern>/editItem</url-pattern>
     </servlet-mapping>
 
+    <filter>
+        <filter-name>LoginFilter</filter-name>
+        <filter-class>auth.LoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
