--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -76,14 +76,26 @@
         <servlet-name>EditItemServlet</servlet-name>
         <url-pattern>/editItem</url-pattern>
     </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>DeleteItemServlet</servlet-name>
+        <servlet-class>admin.DeleteItemServlet</servlet-class>
+    </servlet>
 
-    <filter>
-        <filter-name>LoginFilter</filter-name>
-        <filter-class>auth.LoginFilter</filter-class>
-    </filter>
+    <servlet-mapping>
+        <servlet-name>DeleteItemServlet</servlet-name>
+        <url-pattern>/deleteItem</url-pattern>
+    </servlet-mapping>
+
+
     <filter-mapping>
         <filter-name>LoginFilter</filter-name>
         <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
+
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 
 </web-app>
