--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -88,11 +88,17 @@
     </servlet-mapping>
 
 
+    <filter>
+        <filter-name>LoginFilter</filter-name>
+        <filter-class>auth.LoginFilter</filter-class>
+    </filter>
+
     <filter-mapping>
         <filter-name>LoginFilter</filter-name>
         <url-pattern>/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
+
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
